fixed alignment issues

--- a/client/src/components/how-it-works/how-it-works.css
+++ b/client/src/components/how-it-works/how-it-works.css
@@ -21,7 +21,8 @@
     width: 30%;
     margin: auto;
     border: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
   }
   .label {
     height: 138px;
